// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextEditorElement > renders 1`] = `
<body>
  <div>
    <div
      class="_texteditor_34ad61"
    >
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <div
          class="unnnic-text-area sm normal"
          data-testid="Message"
          data-v-82a4b073=""
        >
          <!---->
          <textarea
            data-v-82a4b073=""
            value=""
          />
          <!---->
          <!---->
        </div>
      </div>
      <div
        class="_actions_e669ba"
      >
        <div
          class="_emoji_picker_wrapper_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
              data-testid="emoji-button"
              data-v-4cec5e43=""
            >
              <!---->
              <!---->
              <span
                class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
                data-v-4cec5e43=""
                data-v-930380cc=""
              >
                sentiment_satisfied
              </span>
              <span
                class="unnnic-button__label"
                data-v-4cec5e43=""
              >
                
                
                 
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="bold-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_bold
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="italic-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_italic
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="code-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              code
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="strike-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_strikethrough
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <span
          class="_counter_e669ba"
        >
          0
           / 
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextEditorElement > renders with autocomplete 1`] = `
<body>
  <div>
    <div
      class="_texteditor_34ad61"
    >
      <div>
        <div
          class="_completion_wrapper_17662c"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <div
              class="unnnic-text-area sm normal _textarea_17662c"
              data-testid="Message"
              data-v-82a4b073=""
            >
              <!---->
              <textarea
                data-v-82a4b073=""
                value=""
              />
              <!---->
              <!---->
            </div>
          </div>
          <div
            class="_options_wrapper_08dd12"
            data-testid="temba_completion_options_Message"
            id=""
            style="margin-top: 1px; width: -24px; display: none;"
          />
        </div>
      </div>
      <div
        class="_actions_e669ba"
      >
        <div
          class="_emoji_picker_wrapper_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
              data-testid="emoji-button"
              data-v-4cec5e43=""
            >
              <!---->
              <!---->
              <span
                class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
                data-v-4cec5e43=""
                data-v-930380cc=""
              >
                sentiment_satisfied
              </span>
              <span
                class="unnnic-button__label"
                data-v-4cec5e43=""
              >
                
                
                 
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="bold-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_bold
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="italic-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_italic
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="code-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              code
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="strike-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_strikethrough
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <span
          class="_counter_e669ba"
        >
          0
           / 
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextEditorElement > renders with autocomplete and label 1`] = `
<body>
  <div>
    <div
      class="_texteditor_34ad61"
    >
      <div>
        <span
          class="_label_17662c"
        >
          Message
        </span>
        <div
          class="_completion_wrapper_17662c"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <div
              class="unnnic-text-area sm normal _textarea_17662c"
              data-testid="Message"
              data-v-82a4b073=""
            >
              <!---->
              <textarea
                data-v-82a4b073=""
                value=""
              />
              <!---->
              <!---->
            </div>
          </div>
          <div
            class="_options_wrapper_08dd12"
            data-testid="temba_completion_options_Message"
            id=""
            style="margin-top: 1px; width: -24px; display: none;"
          />
        </div>
      </div>
      <div
        class="_actions_e669ba"
      >
        <div
          class="_emoji_picker_wrapper_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
              data-testid="emoji-button"
              data-v-4cec5e43=""
            >
              <!---->
              <!---->
              <span
                class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
                data-v-4cec5e43=""
                data-v-930380cc=""
              >
                sentiment_satisfied
              </span>
              <span
                class="unnnic-button__label"
                data-v-4cec5e43=""
              >
                
                
                 
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="bold-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_bold
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="italic-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_italic
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="code-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              code
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="strike-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_strikethrough
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <span
          class="_counter_e669ba"
        >
          0
           / 
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextEditorElement > renders with error 1`] = `
<body>
  <div>
    <div
      class="_texteditor_34ad61"
    >
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <div
          class="unnnic-text-area sm error"
          data-testid="Message"
          data-v-82a4b073=""
        >
          <!---->
          <textarea
            data-v-82a4b073=""
            value=""
          />
          <!---->
          <div
            class="error-list"
            data-v-82a4b073=""
          >
            
            <span
              data-v-82a4b073=""
            >
              Error
            </span>
            
          </div>
        </div>
      </div>
      <div
        class="_actions_e669ba"
      >
        <div
          class="_emoji_picker_wrapper_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
              data-testid="emoji-button"
              data-v-4cec5e43=""
            >
              <!---->
              <!---->
              <span
                class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
                data-v-4cec5e43=""
                data-v-930380cc=""
              >
                sentiment_satisfied
              </span>
              <span
                class="unnnic-button__label"
                data-v-4cec5e43=""
              >
                
                
                 
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="bold-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_bold
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="italic-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_italic
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="code-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              code
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="strike-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_strikethrough
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <span
          class="_counter_e669ba"
        >
          0
           / 
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextEditorElement > renders with initial value 1`] = `
<body>
  <div>
    <div
      class="_texteditor_34ad61"
    >
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <div
          class="unnnic-text-area sm normal"
          data-testid="Message"
          data-v-82a4b073=""
        >
          <!---->
          <textarea
            data-v-82a4b073=""
            value="Hello"
          />
          <!---->
          <!---->
        </div>
      </div>
      <div
        class="_actions_e669ba"
      >
        <div
          class="_emoji_picker_wrapper_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
              data-testid="emoji-button"
              data-v-4cec5e43=""
            >
              <!---->
              <!---->
              <span
                class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
                data-v-4cec5e43=""
                data-v-930380cc=""
              >
                sentiment_satisfied
              </span>
              <span
                class="unnnic-button__label"
                data-v-4cec5e43=""
              >
                
                
                 
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="bold-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_bold
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="italic-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_italic
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="code-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              code
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="strike-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_strikethrough
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <span
          class="_counter_e669ba"
        >
          5
           / 
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`TextEditorElement > renders with label 1`] = `
<body>
  <div>
    <div
      class="_texteditor_34ad61"
    >
      <div
        data-use-vue-component-wrap=""
        data-v-app=""
        style="all: unset;"
      >
        <div
          class="unnnic-text-area sm normal"
          data-testid="Message"
          data-v-82a4b073=""
        >
          <div
            class="label"
            data-v-82a4b073=""
          >
            Message
          </div>
          <textarea
            data-v-82a4b073=""
            value=""
          />
          <!---->
          <!---->
        </div>
      </div>
      <div
        class="_actions_e669ba"
      >
        <div
          class="_emoji_picker_wrapper_e669ba"
        >
          <div
            data-use-vue-component-wrap=""
            data-v-app=""
            style="all: unset;"
          >
            <button
              class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
              data-testid="emoji-button"
              data-v-4cec5e43=""
            >
              <!---->
              <!---->
              <span
                class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
                data-v-4cec5e43=""
                data-v-930380cc=""
              >
                sentiment_satisfied
              </span>
              <span
                class="unnnic-button__label"
                data-v-4cec5e43=""
              >
                
                
                 
              </span>
              <!---->
            </button>
          </div>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="bold-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_bold
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="italic-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_italic
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="code-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              code
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <div
          data-use-vue-component-wrap=""
          data-v-app=""
          style="all: unset;"
        >
          <button
            class="unnnic-button unnnic-button--size-small unnnic-button--tertiary unnnic-button--icon-on-center"
            data-testid="strike-button"
            data-v-4cec5e43=""
          >
            <!---->
            <!---->
            <span
              class="material-symbols-rounded unnnic-icon-scheme--neutral-dark unnnic-icon-size--sm"
              data-v-4cec5e43=""
              data-v-930380cc=""
            >
              format_strikethrough
            </span>
            <span
              class="unnnic-button__label"
              data-v-4cec5e43=""
            >
              
              
               
            </span>
            <!---->
          </button>
        </div>
        <span
          class="_counter_e669ba"
        >
          0
           / 
        </span>
      </div>
    </div>
  </div>
</body>
`;
